# trade-app

./: .gitignore  LICENSE  README.md  operasyon.md  package-lock.json  package.json
.github/workflows/: build.yml
roadmap/: ALARM_NOTIF_SYSTEM.md  API_SECURITY_PROTOCOL.md  BACKEND_ENGINE.md  DATABASE_SCHEMA.md  DATA_FLOW_ENGINE.md  INTERFACE_DESIGN.md  MODULE_BATCH_TRADING.md  MODULE_STOP_LOSS.md  PROJECT_STRUCTURE.md  RISK_MANAGEMENT_SERVICE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: dispatcher.rs  mod.rs  state.rs
src-tauri/src/db/: mod.rs
src-tauri/src/exchange/: bybit.rs  mod.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/modules/: mod.rs  risk_calculator.rs  stop_loss.rs  traits.rs
src-tauri/src/security/: mod.rs  vault.rs
src/components/: AnchoredVwapSettings.tsx  ApiSettings.tsx  ChartDrawings.tsx  ChartToolbar.tsx  ColorSettings.tsx  CustomChart.tsx  LanguageSwitcher.tsx  PriceChart.tsx  ResizablePanel.tsx  SmaSettings.tsx  StrategyBuilder.tsx  SymbolList.tsx  VwapSettings.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  tr.json
