[package]
name = "algotrade-os"
version = "0.1.1"
description = "AlgoTrade OS - Modular Trading Platform"
authors = ["Meliksah"]
edition = "2021"

[lib]
name = "algotrade_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket for exchange connections
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Directory paths
dirs = "5"

# Security - Encryption
aes-gcm = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async channels
async-trait = "0.1"

# HTTP client for REST API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HMAC for API signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

